05 06 2017 update manager news

--- a/lawfirm/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/lawfirm/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -286,6 +286,9 @@
                         <li>
                             <a href="@Html.Raw(Url.Action("CauHoiList", "Question"))"><i class="fa fa-bar-chart-o fa-fw"></i> Câu hỏi</a>
                         </li>
+                        <li>
+                            <a href="@Html.Raw(Url.Action("List", "News"))"><i class="fa fa-bar-chart-o fa-fw"></i> Tin tức</a>
+                        </li>
                         @*<li>
                                 <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
                             </li>
