--- a/lawfirm/Views/News/Index.cshtml
+++ b/lawfirm/Views/News/Index.cshtml
@@ -15,7 +15,9 @@
                 {
                     <li>
                         <div class="box">
-                            <img src="~/Content/Client/images/bride-sideview.jpg" alt="Img" height="245" width="213">
+                            <div class="img-news">
+                                <img src="~/Content/Client/images/bride-sideview.jpg" alt="Img">
+                            </div>
                         </div>
                         <p class="info">
                             @news.CreatedAt.ToString("dd/MM/yyyy HH:mm:ss") 
