--- a/lawfirm/Views/Shared/_Layout.cshtml
+++ b/lawfirm/Views/Shared/_Layout.cshtml
@@ -151,7 +151,7 @@
                         
                         </div>
 
-                        <script>
+                        @*<script>
                             $(document).ready(function () {
                                 $.post("@Html.Raw(Url.Action("GetAllNews","News"))", { TypeId: 1 }).
                                     done(function (data) {
@@ -166,7 +166,7 @@
                                         console.log("server error");
                                     });
                             });
-                        </script>
+                        </script>*@
                     </div>
                     <div class="box-sidebar box-notice">
                         <h2>Thông báo</h2>
@@ -174,7 +174,7 @@
 
                         </div>
 
-                        <script>
+                        @*<script>
                             $(document).ready(function() {
                                 $.post("@Html.Raw(Url.Action("GetAllNews", "News"))", { TypeId: 2 }).
                                     done(function(data) {
@@ -189,7 +189,7 @@
                                         console.log("server error");
                                     });
                             });
-                        </script>
+                        </script>*@
                     </div>
                     <div class="box-sidebar box-notice">
                         <h2>Góc phụ huynh</h2>
@@ -197,7 +197,7 @@
 
                         </div>
 
-                        <script>
+                        @*<script>
                             $(document).ready(function() {
                                 $.post("@Html.Raw(Url.Action("GetAllNews", "News"))", { TypeId: 5 }).
                                     done(function(data) {
@@ -212,7 +212,7 @@
                                         console.log("server error");
                                     });
                             });
-                        </script>
+                        </script>*@
                     </div>
                     <div class="box-sidebar box-notice">
                         <h2>Góc học sinh</h2>
@@ -220,7 +220,7 @@
 
                         </div>
 
-                        <script>
+                        @*<script>
                             $(document).ready(function() {
                                 $.post("@Html.Raw(Url.Action("GetAllNews", "News"))", { TypeId: 6 }).
                                     done(function(data) {
@@ -235,7 +235,7 @@
                                         console.log("server error");
                                     });
                             });
-                        </script>
+                        </script>*@
                     </div>
 
                 </div>
