--- a/lawfirm/Views/Shared/_Layout.cshtml
+++ b/lawfirm/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Law Firm</title>
+    <title>Kiểm tra kiến thức</title>
     <link href="~/Content/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="~/Content/jquery.bxslider.css" rel="stylesheet" />
