--- a/lawfirm/Views/Practices/Index.cshtml
+++ b/lawfirm/Views/Practices/Index.cshtml
@@ -17,32 +17,31 @@
         {
             <div>
                 <h2>THÔNG TIN CÁ NHÂN</h2>
-                <ul id="user-profile">
-                </ul>
+                <ul id="user-profile"></ul>
             </div>
-        
+
             <div>
                 <h2>BÀI TEST CHƯA HOÀN THÀNH</h2>
-                <div class="box-testing"></div>             
+                <div class="box-testing"></div>
             </div>
             <script>
-                $(document).ready(function() {
+                $(document).ready(function () {
                     $.post("@Html.Raw(Url.Action("GetTesting", "Practices"))")
-                        .done(function(data) {
+                        .done(function (data) {
                             $(".box-testing").html("");
-                            data.forEach(function(v) {
+                            data.forEach(function (v) {
                                 var link = '@Html.ActionLink("nameTest", "Tintuc", "News", new {id = "idTinTuc"}, null)<br/>';
                                 link = link.replace('nameTest', v.Name);
                                 link = link.replace("idTinTuc", v.Id);
                                 $(".box-testing").append(link);
                             });
                         })
-                        .fail(function(data) {
+                        .fail(function (data) {
                             alert("server error");
                         });
 
                     $.post("@Html.Raw(Url.Action("GetUser", "Login"))")
-                        .done(function(data) {
+                        .done(function (data) {
                             if (data) {
                                 $("#user-profile").append("<p>Họ và tên: " + data.FullName + "</p>");
                                 $("#user-profile").append("<p>Email: " + data.Email + "</p>");
@@ -63,135 +62,99 @@
     </div>
     <div class="main" ng-app="testApp" ng-controller="testCtr" style="margin-top: 31px" ng-cloak="">
         <div class="box-test">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="form-group" style="height: inherit">
-                        <label class="control-label col-sm-6">Số câu hỏi (*)</label>
-                        <div class="col-sm-6">
-                            <input ng-model="test.quantityQuestion" type="number" class="form-control" placeholder="Số lượng câu hỏi"/>
-                        </div>
-                    </div>
+            <div class="form-group flexbox">
+                <div class="input-test flexbox">
+                    <label class="control-label">Số câu hỏi (*)</label>
+                    <input ng-model="test.quantityQuestion" type="number" class="form-control" placeholder="Số lượng câu hỏi" />
                 </div>
-                <div class="col-md-4">
-                    <div class="form-group" style="height: inherit">
-                        <label class="control-label col-sm-6">Thời gian</label>
-                        <div class="col-sm-6">
-                            <input ng-model="test.amountOfTime" type="number" class="form-control" placeholder="VD: 50 (thời gian được tính theo phút)"/>
-                        </div>
-                    </div>
+                <div class="input-test flexbox">
+                    <label class="control-label">Thời gian</label>
+                    <input ng-model="test.amountOfTime" type="number" class="form-control" placeholder="VD: 50 (thời gian được tính theo phút)"/>
                 </div>
-                <div class="col-md-4">
-                    <div class="form-group" style="height: inherit">
-                        <label class="control-label col-sm-6">Cấp độ</label>
-                        <div class="col-sm-6">
-                            <select class="form-control"
-                                    name="questionLevel" id="questionLevel"
-                                    ng-options="option.Name for option in test.QuestionLevel"
-                                    ng-model="test.questionLevel"></select>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4" ng-show="test.LevelSchool.length > 0">
-                    <div class="form-group">
-                        <label class="control-label col-sm-6">Trình độ (*)</label>
-                        <div class="col-sm-6">
-                            <select class="form-control"
-                                    name="levelSchool" id="levelSchool"
-                                    ng-options="option.Name for option in test.LevelSchool"
-                                    ng-model="test.levelSchool"></select>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4" ng-show="(test.Class | filter:{LevelSchoolId: test.levelSchool.Id}:true).length > 0 ">
-                    <div class="form-group" style="height: inherit">
-                        <label class="control-label col-sm-6">Lớp (*)</label>
-                        <div class="col-sm-6">
-                            <select class="form-control"
-                                    name="class" id="class"
-                                    ng-options="option.Name for option in test.Class | filter:{LevelSchoolId: test.levelSchool.Id}:true"
-                                    ng-model="test.class"
-                                    ng-disabled="test.levelSchool === undefined"></select>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4" ng-show="(test.Class | filter:{LevelSchoolId: test.levelSchool.Id}:true).length > 0 ">
-                    <div class="form-group" style="height: inherit">
-                        <label class="control-label col-sm-6">Môn học (*)</label>
-                        <div class="col-sm-6">
-                            <select class="form-control"
-                                    name="subject" id="subject"
-                                    ng-options="option.Name for option in test.Subject | filter:{ClassId: test.class.Id}:true"
-                                    ng-model="test.subject"
-                                    ng-disabled="test.class === undefined"></select>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="col-md-4" ng-show="(test.Class | filter:{LevelSchoolId: test.levelSchool.Id}:true).length <= 0 && (test.SubjectOther.length > 0 || (test.SubjectOther | filter:{ClassId: test.class.Id}:true).length > 0)">
-                    <div class="form-group" style="height: inherit">
-                        <label class="control-label col-sm-6">Chủ đề (*)</label>
-                        <div class="col-sm-6">
-                            <select class="form-control"
-                                    name="subjectOther" id="subjectOther"
-                                    ng-options="option.Name for option in test.SubjectOther | filter:{ClassId: test.class.Id}:true"
-                                    ng-model="test.subjectOther"></select>
-                        </div>
-                    </div>
+                <div class="input-test flexbox">
+                    <label class="control-label">Cấp độ</label>
+                    <select class="form-control"
+                            name="questionLevel" id="questionLevel"
+                            ng-options="option.Name for option in test.QuestionLevel"
+                            ng-model="test.questionLevel"></select>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group" style="height: inherit">
-                        <label class="control-label col-md-4">Tên bài kiểm tra (*)</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" id="txt-nameTest" ng-model="test.nameTest" />
-                        </div>
+
+            <div class="form-group flexbox">
+            
+                <div class="input-test flexbox" ng-show="test.LevelSchool.length > 0">
+                    <label class="control-label">Trình độ (*)</label>
+                    <select class="form-control"
+                            name="levelSchool" id="levelSchool"
+                            ng-options="option.Name for option in test.LevelSchool"
+                            ng-model="test.levelSchool"></select>
+                </div>
+                <div class="input-test flexbox" ng-show="(test.Class | filter:{LevelSchoolId: test.levelSchool.Id}:true).length > 0">
+                    <label class="control-label">Lớp (*)</label>
+                    <select class="form-control"
+                            name="class" id="class"
+                            ng-options="option.Name for option in test.Class | filter:{LevelSchoolId: test.levelSchool.Id}:true"
+                            ng-model="test.class"
+                            ng-disabled="test.levelSchool === undefined"></select>
+                </div>
+                 <div class="input-test flexbox" ng-show="(test.Class | filter:{LevelSchoolId: test.levelSchool.Id}:true).length > 0 ">
+                    <label class="control-label">Môn học (*)</label>
+                    <select class="form-control"
+                            name="subject" id="subject"
+                            ng-options="option.Name for option in test.Subject | filter:{ClassId: test.class.Id}:true"
+                            ng-model="test.subject"
+                            ng-disabled="test.class === undefined"></select>
+                </div>
+            </div>
+            <div class="form-group flexbox input-name" ng-show="(test.Class | filter:{LevelSchoolId: test.levelSchool.Id}:true).length <= 0 && (test.SubjectOther.length > 0 || (test.SubjectOther | filter:{ClassId: test.class.Id}:true).length > 0)">
+                <label class="control-label">Chủ đề (*)</label>
+                <select class="form-control"
+                        name="subjectOther" id="subjectOther"
+                        ng-options="option.Name for option in test.SubjectOther | filter:{ClassId: test.class.Id}:true"
+                        ng-model="test.subjectOther"></select>
+            </div>
+
+                <div class="form-group flexbox input-name">
+                    <label class="control-label">Tên bài kiểm tra (*)</label>
+                    <input type="text" class="form-control" id="txt-nameTest" ng-model="test.nameTest" />
+                </div>
+
+            <p class="text text-danger pull-left" ng-show="practiceTest !== undefined || practiceTest !== null || practiceTest.length > 0 ">Thời gian còn lại: <span style="font-size: 20px; font-weight: bold">{{practiceTest.AmountTime > 0 ? (countDown | secondsToDateTime | date: "HH:mm:ss") : "------"}}</span> </p>
+
+
+            <button type="button" class="btn btn-default pull-right"
+                    ng-show="test.quantityQuestion > 0 && (test.subjectOther !== undefined || test.subject !== undefined) && (practiceTest === undefined || practiceTest === null) && test.nameTest != ''"
+                    ng-click="StartTest()">
+                Bắt đầu làm bài
+            </button>
+            <button type="button" class="btn btn-default pull-right"
+                    ng-show="test != {}"
+                    ng-click="btnClear()">
+                Hủy
+            </button>
+            <button class="btn btn-default pull-right"
+                    ng-show="practiceTest !== undefined && practiceTest !== null"
+                    ng-click="doneTest()">
+                Hoàn thành
+            </button>
+
+
+            <div class="col-md-12" style="background-color: white" ng-show="praticeTest !== undefined || practiceTest !== null || praticeTest.length > 0">
+                <div class="wrapper-box-question" style="margin: 10px 0" ng-repeat="question in practiceTest.ListTest track by $index">
+                    <div class="box-question">
+                        {{$index + 1}}. {{question.Name}}
                     </div>
-                </div>
-            </div>
-            <div class="row" style="margin: 20px 0;width: 107%;">
-                <div class="col-md-6">
-                    <p class="text text-danger pull-left" ng-show="practiceTest !== undefined || practiceTest !== null || practiceTest.length > 0 ">Thời gian còn lại: <span style="font-size: 20px; font-weight: bold">{{practiceTest.AmountTime > 0 ? (countDown | secondsToDateTime | date: "HH:mm:ss") : "------"}}</span> </p>
-                </div>
-                <div class="col-md-6">
-                    <button type="button" class="btn btn-default pull-right"
-                            ng-show="test.quantityQuestion > 0 && (test.subjectOther !== undefined || test.subject !== undefined) && (practiceTest === undefined || practiceTest === null) && test.nameTest != ''"
-                            ng-click="StartTest()">
-                        Bắt đầu làm bài
-                    </button>
-                    <button type="button" class="btn btn-default pull-right"
-                            ng-show="test != {}"
-                            ng-click="btnClear()">
-                        Hủy
-                    </button>
-                    <button class="btn btn-default pull-right"
-                            ng-show="practiceTest !== undefined && practiceTest !== null"
-                            ng-click="doneTest()">
-                        Hoàn thành
-                    </button>
-                </div>
-            </div>
-            <div class="row" ng-show="praticeTest !== undefined || practiceTest !== null || praticeTest.length > 0" style="width: 107%;">
-                <div class="col-md-12" style="background-color: white">
-                    <div class="wrapper-box-question" style="margin: 10px 0" ng-repeat="question in practiceTest.ListTest track by $index">
-                        <div class="box-question">
-                            {{$index + 1}}. {{question.Name}}
-                        </div>
-                        <div class="box-anwser">
-                            @*<input type="radio" name="cau1" />A. 10 <input type="radio" name="cau1" />B. 11<input type="radio" name="cau1" />C. 12 <input type="radio" name="cau1" />D. 13*@
-                            <p ng-repeat="ans in question.ListAnwsers">
-                                <input type="radio" name="cauhoi_{{question.Id}}" value="dapan_{{ans.Id}}"
-                                       ng-click="addAns(question.Id,ans)" /> {{ans.AnswerName}}. {{ans.Description}}
-                            </p>
-                        </div>
+                    <div class="box-anwser">
+                        @*<input type="radio" name="cau1" />A. 10 <input type="radio" name="cau1" />B. 11<input type="radio" name="cau1" />C. 12 <input type="radio" name="cau1" />D. 13*@
+                        <p ng-repeat="ans in question.ListAnwsers">
+                            <input type="radio" name="cauhoi_{{question.Id}}" value="dapan_{{ans.Id}}"
+                                   ng-click="addAns(question.Id,ans)" /> {{ans.AnswerName}}. {{ans.Description}}
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-       
+
 
         @*<h1>NỘI DUNG TRẮC NGHIỆM</h1>*@
         <div class="box-testDone" ng-show="testResult !== undefined && testResult !== null">
