--- a/lawfirm/Views/HomePage/Page.cshtml
+++ b/lawfirm/Views/HomePage/Page.cshtml
@@ -14,11 +14,19 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/style.css" rel="stylesheet" />
 
+    @*script file*@
 
+    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="~/Content/bootstrap-4.0.0-beta-dist/js/bootstrap.min.js"></script>
+    <script src="~/Content/OwlCarousel2-2.2.1/dist/owl.carousel.min.js"></script>
+
+    <script src="~/Scripts/script.js"></script>
 </head>
 
 <body>
 
+<div class="container">
     <header>
         <div class="logo">
             <img src="~/Content/Client/images/logo2.png" />
@@ -46,26 +54,25 @@
                         <ul>
                             <li><a href="#">MẪU GIÁO</a></li>
                             <li><a href="#">TIỂU HỌC</a></li>
-                            <li>TRUNG HỌC CƠ SỞ</li>
-                            <li>TRUNG HỌC PHỔ THÔNG</li>
-                            <li>SINH VIÊN</li>
-                            <li>IQ</li>
-                            <li>BẰNG LÁI</li>
-                            <li>THỂ THAO</li>
-                            <li>THỂ THAO</li>
-                            <li>GIẢI TRÍ</li>
+                            <li><a href="#">TRUNG HỌC CƠ SỞ</a></li>
+                            <li><a href="#">TRUNG HỌC PHỔ THÔNG</a></li>
+                            <li><a href="#">TRUNG HỌC PHỔ THÔNG</a></li>
+                            <li><a href="#">IQ</a></li>
+                            <li><a href="#">BẰNG LÁI</a></li>
+                            <li><a href="#">THỂ THAO</a></li>
+                            <li><a href="#">GIẢI TRÍ</a></li>
                         </ul>
                     </li>
                     <li><a href="#">HỎI ĐÁP</a></li>
                     <li>
                         <a href="#">TIN TỨC</a>
                         <ul>
-                            <li>TIN TỨC</li>
-                            <li>THÔNG BÁO</li>
-                            <li>SỰ KIỆN</li>
-                            <li>THỦ THUẬT</li>
-                            <li>GÓC HỌC SINH</li>
-                            <li>GÓC PHỤ HUYNH</li>
+                            <li><a href="#">TIN TỨC</a></li>
+                            <li><a href="#">THÔNG BÁO</a></li>
+                            <li><a href="#">SỰ KIỆN</a></li>
+                            <li><a href="#">THỦ THUẬT</a></li>
+                            <li><a href="#">GÓC HỌC SINH</a></li>
+                            <li><a href="#">GÓC PHỤ HUYNH</a></li>
                         </ul>
                     </li>
                     <li><a href="#">GIỚI THIỆU</a></li>
@@ -74,132 +81,197 @@
             </nav>
         </div>
     </header>
+</div>
 
 
     <section id="slider" class="owl-carousel owl-theme">
-        <div class="item"><h4>1</h4></div>
-        <div class="item"><h4>2</h4></div>
-        <div class="item"><h4>3</h4></div>
-        <div class="item"><h4>4</h4></div>
-        <div class="item"><h4>5</h4></div>
-        <div class="item"><h4>6</h4></div>
-        <div class="item"><h4>7</h4></div>
-        <div class="item"><h4>8</h4></div>
-        <div class="item"><h4>9</h4></div>
-        <div class="item"><h4>10</h4></div>
-        <div class="item"><h4>11</h4></div>
-        <div class="item"><h4>12</h4></div>
+        <div class="item">
+            <img src="~/Content/images/bia_1.jpg" />
+        </div>
+        <div class="item">
+            <img src="~/Content/images/bia_1.jpg" />
+        </div>
+        <div class="item">
+            <img src="~/Content/images/bia_1.jpg" />
+        </div>
+        <div class="item">
+            <img src="~/Content/images/bia_1.jpg" />
+        </div>
+        <div class="item">
+            <img src="~/Content/images/bia_1.jpg" />
+        </div>
+        <div class="item">
+            <img src="~/Content/images/bia_1.jpg" />
+        </div>
+        <div class="item">
+            <img src="~/Content/images/bia_1.jpg" />
+        </div>
+        <div class="item">
+            <img src="~/Content/images/bia_1.jpg" />
+        </div>
     </section>
+    <script>
+        $(document).ready(() => {
+            $('#slider').owlCarousel({
+                loop: true,
+                margin: 10,
+                nav: false,
+                dots: false,
+                items: 1,
+            });
+        });
+    </script>
+    <section>
+        <div class="container">
+            <div id="wrapper">
+                <aside class="left">
+                    <div class="box-menu">
+                        <div class="box-container">
+                            <p class="title">TRẮC NGHIỆM</p>
+                            <a href="#">MẪU GIÁO</a>
+                            <a href="#">TIỂU HỌC</a>
+                            <a href="#">TRUNG HỌC CƠ SỞ</a>
+                            <a href="#">TRUNG HỌC PHỔ THÔNG</a>
+                            <a href="#">SINH VIÊN</a>
+                            <a href="#">IQ</a>
+                            <a href="#">BẰNG LÁI XE</a>
+                            <a href="#">THỂ THAO</a>
+                            <a href="#">GIẢI TRÍ</a>
+                        </div>
+                    </div>
+                    <div class="box-menu">
+                        <div class="box-container">
+                            <p class="title">DANH MỤC</p>
+                            <a href="#">TIN TỨC</a>
+                            <a href="#">THÔNG BÁO</a>
+                            <a href="#">SỰ KIỆN</a>
+                            <a href="#">THỦ THUẬT</a>
+                            <a href="#">GÓC HỌC SINH</a>
+                            <a href="#">GÓC PHỤ HUYNH</a>
+                        </div>
+                    </div>
+                    <div class="box-menu">
+                        <div class="box-container">
+                            <p class="title">BÀI VIẾT MỚI</p>
+                            <a href="#">1. Tên bài viết 1 (10/8/2017)</a>
+                            <a href="#">2. Tên bài viết 1 (10/8/2017)</a>
+                            <a href="#">3. Tên bài viết 1 (10/8/2017)</a>
+                            <a href="#">4. Tên bài viết 1 (10/8/2017)</a>
+                            <a href="#">5. Tên bài viết 1 (10/8/2017)</a>
+                        </div>
+                    </div>
+                </aside>
+                <div class="content">
+                    <div class="content-container">
+                        <div class="practices">
+                            <form action="/" method="post">
+                                <div class="row">
+                                    <div class="col-md-5">
+                                        <div class="form-group">
+                                            <label class="control-label">Chọn lớp</label>
+                                            <select class="form-control">
+                                                <option value="9">Lớp 9</option>
+                                                <option value="9">Lớp 9</option>
+                                                <option value="9">Lớp 9</option>
+                                            </select>
+                                        </div>    
+                                    </div>
+                                    <div class="col-md-5">
+                                        <div class="form-group">
+                                            <label class="control-label">Chọn môn</label>
+                                            <select class="form-control">
+                                                <option value="9">Anh văn</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <div class="form-group">
+                                            <label class="control-label">&nbsp;</label>
+                                            <button id="button-practices" class="btn btn-primary">Bắt đầu</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
 
-    <section id="wrapper">
-        <aside class="left">
-            <div class="box-menu">
-                <p class="title">TRẮC NGHIỆM</p>
-                <a href="#">MẪU GIÁO</a>
-                <a href="#">TIỂU HỌC</a>
-                <a href="#">TRUNG HỌC CƠ SỞ</a>
-                <a href="#">TRUNG HỌC PHỔ THÔNG</a>
-                <a href="#">SINH VIÊN</a>
-                <a href="#">IQ</a>
-                <a href="#">BẰNG LÁI XE</a>
-                <a href="#">THỂ THAO</a>
-                <a href="#">GIẢI TRÍ</a>
-            </div>
-            <div class="box-menu">
-                <p class="title">DANH MỤC</p>
-                <a href="#">TIN TỨC</a>
-                <a href="#">THÔNG BÁO</a>
-                <a href="#">SỰ KIỆN</a>
-                <a href="#">THỦ THUẬT</a>
-                <a href="#">GÓC HỌC SINH</a>
-                <a href="#">GÓC PHỤ HUYNH</a>
-            </div>
-            <div class="box-menu">
-                <p class="title">BÀI VIẾT MỚI</p>
-                <a href="#">1. Tên bài viết 1 (10/8/2017)</a>
-                <a href="#">2. Tên bài viết 1 (10/8/2017)</a>
-                <a href="#">3. Tên bài viết 1 (10/8/2017)</a>
-                <a href="#">4. Tên bài viết 1 (10/8/2017)</a>
-                <a href="#">5. Tên bài viết 1 (10/8/2017)</a>
-            </div>
-        </aside>
-        <div class="content">
-            <div class="practices">
-                <div class="form-group">
-                    <label class="control-label">Chọn lớp</label>
-                    <select class="form-control">
-                        <option value="9">Lớp 9</option>
-                        <option value="9">Lớp 9</option>
-                        <option value="9">Lớp 9</option>
-                    </select>
+                        <p class="one-title">Chọn trình độ trắc nghiệm</p>
+
+                        <div class="container-practices">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <a href="#" class="box-practices">
+                                        <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
+                                        <p class="title-practices">Mẫu giáo</p>
+                                        <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#" class="box-practices">
+                                        <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
+                                        <p class="title-practices">Mẫu giáo</p>
+                                        <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#" class="box-practices">
+                                        <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
+                                        <p class="title-practices">Mẫu giáo</p>
+                                        <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#" class="box-practices">
+                                        <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
+                                        <p class="title-practices">Mẫu giáo</p>
+                                        <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#" class="box-practices">
+                                        <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
+                                        <p class="title-practices">Mẫu giáo</p>
+                                        <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#" class="box-practices">
+                                        <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
+                                        <p class="title-practices">Mẫu giáo</p>
+                                        <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#" class="box-practices">
+                                        <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
+                                        <p class="title-practices">Mẫu giáo</p>
+                                        <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#" class="box-practices">
+                                        <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
+                                        <p class="title-practices">Mẫu giáo</p>
+                                        <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#" class="box-practices">
+                                        <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
+                                        <p class="title-practices">Mẫu giáo</p>
+                                        <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
+                                    </a>
+                                </div>
+                            </div>
+                           
+
+                          
+
+                        
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label">Chọn môn</label>
-                    <select class="form-control">
-                        <option value="9">Anh văn</option>
-                    </select>
-                </div>
-                <button class="btn btn-primary">Bắt đầu</button>
             </div>
-
-            <p class="one-title">Chọn trình độ trắc nghiệm</p>
-
-            <div class="container-practices">
-
-                <a href="#" class="box-practices">
-                    <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
-                    <p>Mẫu giáo</p>
-                    <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
-                </a>
-
-                <a href="#" class="box-practices">
-                    <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
-                    <p>Mẫu giáo</p>
-                    <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
-                </a>
-
-                <a href="#" class="box-practices">
-                    <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
-                    <p>Mẫu giáo</p>
-                    <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
-                </a>
-
-                <a href="#" class="box-practices">
-                    <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
-                    <p>Mẫu giáo</p>
-                    <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
-                </a>
-
-                <a href="#" class="box-practices">
-                    <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
-                    <p>Mẫu giáo</p>
-                    <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
-                </a>
-
-                <a href="#" class="box-practices">
-                    <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
-                    <p>Mẫu giáo</p>
-                    <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
-                </a>
-
-                <a href="#" class="box-practices">
-                    <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
-                    <p>Mẫu giáo</p>
-                    <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
-                </a>
-
-                <a href="#" class="box-practices">
-                    <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
-                    <p>Mẫu giáo</p>
-                    <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
-                </a>
-
-                <a href="#" class="box-practices">
-                    <img src="~/Content/Client/images/maugiao1.jpg" alt="" />
-                    <p>Mẫu giáo</p>
-                    <p>Những câu hỏi kiểm tra kiến thức dành cho mẫu giáo</p>
-                </a>
-            </div>
+            
         </div>
     </section>
 
@@ -210,7 +282,10 @@
             <img src="~/Content/Client/images/logo2.png" alt="" />
         </div>
         <div>
-
+            <p>CÔNG TY PHÁT MINH ĐẠT</p>
+            <p>Address: 4 Nguyễn Đình Chiểu, Q1, Tp.HCM</p>
+            <p>Phone: 0978876379</p>
+            <p>Email: tckiet@gmail.com</p>
         </div>
         <div class="partner">
             <img src="~/Content/Client/images/abc.png" alt="" />
@@ -223,14 +298,7 @@
             <img src="~/Content/Client/images/abc.png" alt="" />
         </div>
     </footer>
-    @*script file*@
 
-    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="~/Content/bootstrap-4.0.0-beta-dist/js/bootstrap.min.js"></script>
-    <script src="~/Content/OwlCarousel2-2.2.1/dist/owl.carousel.min.js"></script>
-
-    <script src="~/Scripts/script.js"></script>
 </body>
 
 </html>
